--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "dependencies": {
     "requirejs": "~2.1.8",
-    "jquery": "~1.10.2"
+    "jquery": "~1.10.2",
+    "underscore": "~1.5.2"
   },
   "devDependencies": {}
 }
