--- a/.jshintrc
+++ b/.jshintrc
@@ -11,7 +11,7 @@
   "forin": true,
   "freeze": true,
   "immed": true,
-  "indent": 2,
+  //"indent": 2,
   "latedef": true,
   "newcap": true,
   "noarg": true,
