--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "requirejs": "~2.1.8",
+    "requirejs-text": "~2.0.10",
     "jquery": "~1.10.2",
     "underscore": "~1.5.2"
   },
